Add mass decline in-app notifications
